tests/fails/f20.t
require("fail")

terra foo()
    return niltype + "a"
end
foo()
